--- a/main/styles/main.css
+++ b/main/styles/main.css
@@ -1,10 +1,20 @@
 .main-container {
   opacity:0.8;
-  background-color:red;
   position:fixed;
   width:100%;
   height:100%;
   top:0px;
   left:0px;
   z-index:1000;
+  background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
+}
+
+.center-container {
+  padding: 10px 20px 20px;
+  border: 1px solid black;
+}
+
+button {
+  border: 1px solid white;
+  border-radius: 3px;
 }
