--- a/main/styles/main.css
+++ b/main/styles/main.css
@@ -1,3 +1,37 @@
+button {
+  border: 1px solid white;
+  border-radius: 3px;
+  float: right;
+  padding: 10px;
+  font-family: 'Quicksand', sans-serif;
+  color: #fff;
+  margin-right: 100px;
+}
+
+button:hover {
+  color: #1A1B1F;
+  background: #fff;
+  transition: .5s;
+}
+
+h1 {
+  font-family: 'Sanchez', serif;
+  font-size: 72px;
+  color: #fff;
+}
+
+h2 {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 50px;
+  color: #f5576c;
+}
+
+h3 {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 40px;
+  color: #fff;
+}
+
 .main-container {
   opacity:0.8;
   position:fixed;
@@ -12,9 +46,15 @@
 .center-container {
   padding: 10px 20px 20px;
   border: 1px solid black;
+  margin-top: 50px;
+  text-align: center;
+  background: #1A1B1F;
 }
 
-button {
-  border: 1px solid white;
-  border-radius: 3px;
+.center-container:after {
+   content:'';
+   display:block;
+   height:0;
+   overflow:hidden;
+   clear:right;
 }
