--- a/main/styles/main.css
+++ b/main/styles/main.css
@@ -18,12 +18,15 @@ h1 {
   font-family: 'Sanchez', serif;
   font-size: 72px;
   color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 5px;
 }
 
 h2 {
   font-family: 'Quicksand', sans-serif;
   font-size: 50px;
   color: #f5576c;
+  text-transform: uppercase;
 }
 
 h3 {
@@ -41,6 +44,7 @@ h3 {
   left:0px;
   z-index:1000;
   background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
+  overflow: scroll;
 }
 
 .center-container {
