--- a/main/styles/main.css
+++ b/main/styles/main.css
@@ -6,6 +6,7 @@ button {
   font-family: 'Quicksand', sans-serif;
   color: #fff;
   margin-right: 100px;
+  letter-spacing: 1px;
 }
 
 button:hover {
